# nexus_hover_infos

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/addon/: Addon.hpp
res/: items-names.json
src/: main.cpp  meson.build
src/addon/: Addon.cpp  Shared.cpp
